[project]
name = "lariat"
version = "0.1.0"
description = "Create FileMaker based Websites with Python"
authors = [
    { name = "Nicolas Camenisch", email = "garnele007@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "lxml>=4.9.1",
    "typing-extensions>=4.3.0",
    "httpx>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "black>=22.6.0",
    "pre-commit>=2.20.0",
    "isort>=5.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lariat"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

preview = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "pydiverse.transform"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'
